--- a/ElevenNote.WebAPI/appsettings.json
+++ b/ElevenNote.WebAPI/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection" : "Server=localhost,1433;Database=ElevenNote;User=sa;Password=Crf123456789;"
+    "DefaultConnection" : "Server=localhost;Database=ElevenNote;User Id=sa;Password=Crf123456789;"
   }
 }
