--- a/ElevenNote.WebAPI/appsettings.json
+++ b/ElevenNote.WebAPI/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection" : "Server=localhost;Database=ElevenNote;User Id=sa;Password=Crf123456789;"
+  },
+  "Jwt": {
+    "Key": "SecretSecurityKeyGoesHere",
+    "Issuer": "localhostServer",
+    "Audience": "localhostClient"
   }
 }
